--- a/PortalSocios/PortalSocios/Views/Home/Quotas.cshtml
+++ b/PortalSocios/PortalSocios/Views/Home/Quotas.cshtml
@@ -7,7 +7,7 @@
     <title> Quotas | Portal dos Sócios do Clube Desportivo Coxos da Bola</title>
 </head>
 <body>
-    <div class="titulo"><h2>Quotas</h2></div>
+    <div class="titulo"><h3>QUOTAS</h3></div>
     <hr />
     <div class="container">
         <div class="row painel">
