--- a/PortalSocios/PortalSocios/Views/Home/Sobre.cshtml
+++ b/PortalSocios/PortalSocios/Views/Home/Sobre.cshtml
@@ -18,7 +18,7 @@
     </script>
 </head>
 <body>
-    <div class="titulo"><h2>Sobre</h2></div>
+    <div class="titulo"><h3>SOBRE</h3></div>
     <hr />
     <div class="container">
         <div class="row painel">
@@ -35,7 +35,7 @@
                 <br />
                 <p><span class="tipo">Role:</span> Socio</p>
                 <p><span class="tipo">E-mail:</span> smodesto@gmail.com</p>
-                <p><span class="tipo">Palavra-chave:</span> 123Qwe#</p>
+                <p><span class="tipo">Palavra-chave:</span> 456Qwe#</p>
             </div>
         </div>
     </div>
