--- a/PortalSocios/PortalSocios/Views/Home/Vantagens.cshtml
+++ b/PortalSocios/PortalSocios/Views/Home/Vantagens.cshtml
@@ -7,7 +7,7 @@
     <title> Vantagens | Portal dos Sócios do Clube Desportivo Coxos da Bola</title>
 </head>
 <body>
-    <div class="titulo"><h2>Vantagens</h2></div>
+    <div class="titulo"><h3>VANTAGENS</h3></div>
     <hr />
     <div class="container">
         <div class="row painel">
