--- a/PortalSocios/PortalSocios/Views/Pagamentos/Delete.cshtml
+++ b/PortalSocios/PortalSocios/Views/Pagamentos/Delete.cshtml
@@ -1,90 +1,51 @@
 ﻿@model PortalSocios.Models.Pagamentos
 
-@{
-    ViewBag.Title = "Delete";
-}
-
-<h3>Eliminar Pagamento</h3>
-
-<div>
+<!DOCTYPE html>
+<html lang="pt">
+<head>
+    <meta charset="utf-8" />
+    <title>Eliminar Pagamento | Portal dos Sócios do Clube Desportivo Coxos da Bola</title>
+</head>
+<body>
+    <div class="titulo"><h3>ELIMINAR PAGAMENTO</h3></div>
+    <div class="titulo"><h4>Tem a certeza de que pretende eliminar este pagamento?</h4></div>
+    <div class="titulo"><h5>@Html.ActionLink("- Voltar à lista -", "Index")</h5></div>
     <hr />
-    <dl class="dl-horizontal">
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Socio.Nome)
-        </dt>
+    <div class="container painel">
+        @Html.ValidationSummary(true, "")
 
-        <dd>
-            @Html.DisplayFor(model => model.Socio.Nome)
-        </dd>
+        <div class="col-lg-6 dadosEsq">@Html.DisplayNameFor(model => model.Socio.Nome)</div>
+        <div class="col-lg-6 dadosDir">@Html.DisplayFor(model => model.Socio.Nome)</div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.RefMultibanco)
-        </dt>
+        <div class="col-lg-6 dadosEsq">@Html.DisplayNameFor(model => model.RefMultibanco)</div>
+        <div class="col-lg-6 dadosDir">@Html.DisplayFor(model => model.RefMultibanco)</div>
 
-        <dd>
-            @Html.DisplayFor(model => model.RefMultibanco)
-        </dd>
+        <div class="col-lg-6 dadosEsq">@Html.DisplayNameFor(model => model.Montante)</div>
+        <div class="col-lg-6 dadosDir">@Html.DisplayFor(model => model.Montante)</div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Montante)
-        </dt>
+        <div class="col-lg-6 dadosEsq">@Html.DisplayNameFor(model => model.DataPagam)</div>
+        <div class="col-lg-6 dadosDir">@Html.DisplayFor(model => model.DataPagam)</div>
 
-        <dd>
-            @Html.DisplayFor(model => model.Montante)
-        </dd>
+        <div class="col-lg-6 dadosEsq">@Html.DisplayNameFor(model => model.DataPrevPagam)</div>
+        <div class="col-lg-6 dadosDir">@Html.DisplayFor(model => model.DataPrevPagam)</div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.DataPagam)
-        </dt>
+        <div class="col-lg-6 dadosEsq">@Html.DisplayNameFor(model => model.Multa)</div>
+        <div class="col-lg-6 dadosDir">@Html.DisplayFor(model => model.Multa)</div>
 
-        <dd>
-            @Html.DisplayFor(model => model.DataPagam)
-        </dd>
+        <div class="col-lg-6 dadosEsq">@Html.DisplayNameFor(model => model.Quota.Referencia)</div>
+        <div class="col-lg-6 dadosDir">@Html.DisplayFor(model => model.Quota.Referencia)</div>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.DataPrevPagam)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.DataPrevPagam)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Multa)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Multa)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Quota.Referencia)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Quota.Referencia)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Funcionario.Nome)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Funcionario.Nome)
-        </dd>
-
-    </dl>
-
-    <h4>Tem a certeza de que pretende eliminar este pagamento?</h4>
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="col-lg-6 dadosEsq">@Html.DisplayNameFor(model => model.Funcionario.Nome)</div>
+        <div class="col-lg-6 dadosDir">@Html.DisplayFor(model => model.Funcionario.Nome)</div>        
+    </div>
 
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
-        <div class="form-actions no-color">            
-            @Html.ActionLink("Voltar à lista", "Index") |
-            <input type="submit" value="Sim" class="btn btn-primary" />
+        <div class="col-lg-12 form-actions no-color" style="text-align:center; margin-top:20px;">
+            <input type="submit" value="Sim" class="btn btn-primary" style="font-size: 16px;" />
         </div>
     }
-</div>
+</body>
+</html>
