--- a/PortalSocios/PortalSocios/Content/bootstrap.css
+++ b/PortalSocios/PortalSocios/Content/bootstrap.css
@@ -391,7 +391,7 @@ hr {
   margin-top: 20px;
   margin-bottom: 20px;
   border: 0;
-  border-top: 2px solid #000000;
+  border-top: 1px solid #000000;
 }
 
 .sr-only {
@@ -1417,10 +1417,8 @@ table {
   white-space: nowrap;
   font-size: 14px;
   color: #000000;
-  border-radius: 5px;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 10px;
 }
 
 th {
@@ -1735,7 +1733,7 @@ input[type="number"]::-webkit-inner-spin-button {
   color: #000000;
   vertical-align: middle;
   background-color: #ffffff;
-  border: 1px solid #000000;
+  border: 1px solid #ccc;
   border-radius: 4px;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
@@ -2012,10 +2010,10 @@ textarea.input-lg {
   margin-bottom: 0;
   font-size: 14px;
   font-weight: normal;
-  line-height: 1.428571429;
+  line-height: 1.42857143;
   text-align: center;
-  white-space: nowrap;
   vertical-align: middle;
+  white-space: nowrap;
   cursor: pointer;
   border: 1px solid transparent;
   border-radius: 4px;
@@ -3245,6 +3243,7 @@ input[type="button"].btn-block {
   position: absolute;
   top: 100%;
   left: 0;
+  min-width: 160px;
   z-index: 1000;
   display: none;
   float: left;
