--- a/PortalSocios/PortalSocios/Views/Manage/ChangePassword.cshtml
+++ b/PortalSocios/PortalSocios/Views/Manage/ChangePassword.cshtml
@@ -1,38 +1,45 @@
 ﻿@model PortalSocios.Models.ChangePasswordViewModel
 
-<h2 class="titulo">Alterar a palavra-passe</h2>
-<hr />
+<!DOCTYPE html>
+<html lang="pt">
+<head>
+    <meta charset="utf-8" />
+    <title>Alterar Palavra-Passe | Portal dos Sócios do Clube Desportivo Coxos da Bola</title>
+    @section Scripts {
+        @Scripts.Render("~/bundles/jqueryval")
+    }
+</head>
+<body>
+    <h3 class="titulo">ALTERAR PALAVRA-PASSE</h3>
+    <hr />
 
-@using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
-{
-    @Html.AntiForgeryToken()
-    
-    @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(m => m.OldPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.NewPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
-        </div>
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 control-label" })
-        <div class="col-md-10">
-            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
-        </div>
-    </div>
+    @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { role = "form" })) {
+        @Html.AntiForgeryToken()
 
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Alterar" class="btn btn-primary" />
+        <div class="form-horizontal painel2">
+            @Html.ValidationSummary("")
+            <div class="form-group">
+                @Html.LabelFor(m => m.OldPassword, new { @class = "col-md-4 control-label" })
+                <div class="col-md-8">
+                    @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control" })
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.NewPassword, new { @class = "col-md-4 control-label" })
+                <div class="col-md-8">
+                    @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control" })
+                </div>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-4 control-label" })
+                <div class="col-md-8">
+                    @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
+                </div>
+            </div>
         </div>
-    </div>
-}
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+        <div class="col-md-12" style="text-align:center; margin-top:20px;">
+            <input type="submit" value="Alterar" class="btn btn-primary" style="font-size: 16px;" />
+        </div>
+    }
+</body>
+</html>
