--- a/PortalSocios/PortalSocios/Views/Pagamentos/Create.cshtml
+++ b/PortalSocios/PortalSocios/Views/Pagamentos/Create.cshtml
@@ -1,13 +1,10 @@
 ﻿@model PortalSocios.Models.Pagamentos
 
-@{
-    ViewBag.Title = "Create";
-}
-
 <!DOCTYPE html>
 <html lang="pt">
 <head>
     <meta charset="utf-8" />
+    <title>Criar Novo Pagamento | Portal dos Sócios do Clube Desportivo Coxos da Bola</title>
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script src="~/Scripts/jquery.validate.min.js"></script>
     <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
@@ -19,98 +16,92 @@
     <link rel="stylesheet" href="~/Content/bootstrap-datepicker3.min.css" />
 </head>
 <body>
-    <h3>Criar Novo Pagamento</h3>
+    <div class="titulo"><h3>CRIAR NOVO PAGAMENTO</h3></div>
+    <div class="titulo"><h5>@Html.ActionLink("- Voltar à lista -", "Index")</h5></div>
+    <hr />
 
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
-        <div class="form-horizontal">
-            <hr />
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="form-horizontal painel2">
+            @Html.ValidationSummary(true, "")
 
             <div class="form-group">
-                @Html.LabelFor(model => model.SocioFK, "Sócio", htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
+                @Html.LabelFor(model => model.SocioFK, "Sócio", htmlAttributes: new { @class = "control-label col-md-4" })
+                <div class="col-md-8">
                     @Html.DropDownList("SocioFK", null, htmlAttributes: new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.SocioFK, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.SocioFK, "")
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.RefMultibanco, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
+                @Html.LabelFor(model => model.RefMultibanco, htmlAttributes: new { @class = "control-label col-md-4" })
+                <div class="col-md-8">
                     @Html.EditorFor(model => model.RefMultibanco, new { htmlAttributes = new { @class = "form-control", @maxlength = "9" } })
-                    @Html.ValidationMessageFor(model => model.RefMultibanco, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.RefMultibanco, "")
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.AuxMontante, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
+                @Html.LabelFor(model => model.AuxMontante, htmlAttributes: new { @class = "control-label col-md-4" })
+                <div class="col-md-8">
                     @Html.EditorFor(model => model.AuxMontante, new { htmlAttributes = new { @class = "form-control", @maxlength = "10" } })
-                    @Html.ValidationMessageFor(model => model.AuxMontante, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.AuxMontante, "")
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.DataPagam, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
+                @Html.LabelFor(model => model.DataPagam, htmlAttributes: new { @class = "control-label col-md-4" })
+                <div class="col-md-8">
                     @Html.EditorFor(model => model.DataPagam, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.DataPagam, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.DataPagam, "")
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.DataPrevPagam, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
+                @Html.LabelFor(model => model.DataPrevPagam, htmlAttributes: new { @class = "control-label col-md-4" })
+                <div class="col-md-8">
                     @Html.EditorFor(model => model.DataPrevPagam, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.DataPrevPagam, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.DataPrevPagam, "")
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.AuxMulta, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
+                @Html.LabelFor(model => model.AuxMulta, htmlAttributes: new { @class = "control-label col-md-4" })
+                <div class="col-md-8">
                     @Html.EditorFor(model => model.AuxMulta, new { htmlAttributes = new { @class = "form-control", @maxlength = "10" } })
-                    @Html.ValidationMessageFor(model => model.AuxMulta, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.AuxMulta, "")
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.QuotaFK, "Quota", htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
+                @Html.LabelFor(model => model.QuotaFK, "Quota", htmlAttributes: new { @class = "control-label col-md-4" })
+                <div class="col-md-8">
                     @Html.DropDownList("QuotaFK", null, htmlAttributes: new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.QuotaFK, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.QuotaFK, "")
                 </div>
             </div>
-            
+
             <div class="form-group">
-                @Html.LabelFor(model => model.UserName, "Username", htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
+                @Html.LabelFor(model => model.UserName, "Username", htmlAttributes: new { @class = "control-label col-md-4" })
+                <div class="col-md-8">
                     @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.UserName, "")
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.FuncionarioFK, "Funcionário", htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
+                @Html.LabelFor(model => model.FuncionarioFK, "Funcionário", htmlAttributes: new { @class = "control-label col-md-4" })
+                <div class="col-md-8">
                     @Html.DropDownList("FuncionarioFK", null, htmlAttributes: new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.FuncionarioFK, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" value="Criar" class="btn btn-primary" />
+                    @Html.ValidationMessageFor(model => model.FuncionarioFK, "")
                 </div>
             </div>
         </div>
+        <div class="col-md-12" style="text-align:center; margin-top:20px;">
+            <input type="submit" value="Criar" class="btn btn-primary" style="font-size: 16px;" />
+        </div>
     }
-
-    <div>
-        @Html.ActionLink("Voltar à lista", "Index")
-    </div>
     <script type="text/javascript">
         $('#DataPagam').datepicker({
             format: "yyyy/mm/dd",
