--- a/PortalSocios/PortalSocios/Views/Pagamentos/Index.cshtml
+++ b/PortalSocios/PortalSocios/Views/Pagamentos/Index.cshtml
@@ -5,90 +5,66 @@
 <head>
     <meta charset="utf-8" />
     <title>Lista de Pagamentos | Portal dos Sócios do Clube Desportivo Coxos da Bola</title>
-    <link rel="stylesheet" href="~/Content/Site.css" />
 </head>
 <body>
-    <div class="titulo"><h2>Lista de Pagamentos</h2></div>
-
+    <!-- título -->
+    <div class="titulo"><h3>LISTA DE PAGAMENTOS</h3></div>
     @if (User.IsInRole("Funcionario")) {
-        <p>
-            @Html.ActionLink("Criar novo pagamento", "Create")
+        <div class="titulo"><h5>@Html.ActionLink("- Criar novo pagamento -", "Create")</h5></div>
+    }
+    <hr />
+
+    <!-- interface de pesquisa -->
+    @using (Html.BeginForm()) {
+        <p style="text-align: center;">
+            @Html.TextBox("pesquisar", "", new { @class = "form-control", @maxlength = "9", @placeholder = "Pesquisa por referência", @style = "display: inline; width: 200px" })
+            <input type="submit" class="btn btn-primary" value="Pesquisar" />
         </p>
     }
-    <div id="lista">
-        <table class="table">
-            <tr>
-                <th class="colunas">
-                    @Html.DisplayName("Sócio")
-                </th>
-                <th class="colunas">
-                    @Html.DisplayNameFor(model => model.RefMultibanco)
-                </th>
-                <th class="colunas">
-                    @Html.DisplayNameFor(model => model.Montante)
-                </th>
-                <th class="colunas">
-                    @Html.DisplayNameFor(model => model.DataPagam)
-                </th>
-                <th class="colunas">
-                    @Html.DisplayNameFor(model => model.DataPrevPagam)
-                </th>
-                <th class="colunas">
-                    @Html.DisplayNameFor(model => model.Multa)
-                </th>
-                <th class="colunas">
-                    Quota
-                </th>
-                @if (User.IsInRole("Funcionario")) {
-                    <th class="colunas">
-                        @Html.DisplayNameFor(model => model.UserName)
-                    </th>
-                    <th class="colCentro">
-                        Funcionário
-                    </th>
-                    <th></th>
-                }                
-            </tr>
 
-            @foreach (var item in Model) {
+    <!-- nota -->
+    <div style="text-align:center;">** Só estão apresentados os atributos mais relevantes. Os restantes podem ser consultados individualmente nos detalhes de cada pagamento. **</div>
+
+    <div style="text-align:center;">
+        <div style="display: inline-block;">
+            <!-- tabela de pagamentos -->
+            <table class="table">
+                <!-- cabeçalhos -->
                 <tr>
-                    <td class="colunas">
-                        @Html.DisplayFor(modelItem => item.Socio.Nome)
-                    </td>
-                    <td class="colunas">
-                        @Html.DisplayFor(modelItem => item.RefMultibanco)
-                    </td>
-                    <td class="colunas">
-                        @Html.DisplayFor(modelItem => item.Montante) €
-                    </td>
-                    <td class="colunas">
-                        @Html.DisplayFor(modelItem => item.DataPagam)
-                    </td>
-                    <td class="colunas">
-                        @Html.DisplayFor(modelItem => item.DataPrevPagam)
-                    </td>
-                    <td class="colunas">
-                        @Html.DisplayFor(modelItem => item.Multa) €
-                    </td>
-                    <td class="colunas">
-                        @Html.DisplayFor(modelItem => item.Quota.Referencia)
-                    </td>
-                    @if (User.IsInRole("Funcionario")) {
-                        <td class="colunas">
-                            @Html.DisplayFor(modelItem => item.UserName)
-                        </td>
-                        <td class="colunas">
-                            @Html.DisplayFor(modelItem => item.Funcionario.Nome)
-                        </td>
-                        <td class="colunas">
-                            @Html.ActionLink("Editar", "Edit", new { id = item.PagamentoID }) |
-                            @Html.ActionLink("Detalhes", "Details", new { id = item.PagamentoID }) |
-                            @Html.ActionLink("Eliminar", "Delete", new { id = item.PagamentoID })
-                        </td>
-                    }
+                    <th class="colCentro">@Html.ActionLink("Sócio", "Index", new { ordenar = ViewBag.OrdSocio })</th>
+                    <th class="colCentro">@Html.ActionLink("Referência Multibanco", "Index", new { ordenar = ViewBag.OrdRef })</th>
+                    <th class="colCentro">@Html.DisplayNameFor(model => model.Montante)</th>
+                    <th class="colCentro">@Html.DisplayNameFor(model => model.DataPagam)</th>
+                    <th class="colCentro">@Html.DisplayNameFor(model => model.DataPrevPagam)</th>
+                    <th class="colCentro">@Html.DisplayNameFor(model => model.Multa)</th>
+                    <th class="colCentro">Quota</th>
+                    <th class="colCentro">Opções de Gestão</th>
                 </tr>
-            }
-        </table>
-    </div>
+                <!-- dados dos pagamentos -->
+                @foreach (var item in Model) {
+                    <tr>
+                        <td class="colEsq">@Html.DisplayFor(modelItem => item.Socio.Nome)</td>
+                        <td class="colCentro">@Html.DisplayFor(modelItem => item.RefMultibanco)</td>
+                        <td class="colCentro">@Html.DisplayFor(modelItem => item.Montante) €</td>
+                        <td class="colCentro">@Html.DisplayFor(modelItem => item.DataPagam)</td>
+                        <td class="colCentro">@Html.DisplayFor(modelItem => item.DataPrevPagam)</td>
+                        <td class="colCentro">@Html.DisplayFor(modelItem => item.Multa) €</td>
+                        <td class="colEsq">@Html.DisplayFor(modelItem => item.Quota.Referencia)</td>
+                        @if (User.IsInRole("Funcionario")) {
+                            <td class="colCentro">
+                                @Html.ActionLink("Editar", "Edit", new { id = item.PagamentoID }) |
+                                @Html.ActionLink("Detalhes", "Details", new { id = item.PagamentoID }) |
+                                @Html.ActionLink("Eliminar", "Delete", new { id = item.PagamentoID })
+                            </td>
+                        }
+                        @if (User.IsInRole("Socio")) {
+                            <td class="colCentro">
+                                @Html.ActionLink("Detalhes", "Details", new { id = item.PagamentoID })
+                            </td>
+                        }
+                    </tr>
+                }
+            </table>
+        </div>
 </body>
 </html>
