--- a/PortalSocios/PortalSocios/Views/Quotas/Create.cshtml
+++ b/PortalSocios/PortalSocios/Views/Quotas/Create.cshtml
@@ -1,75 +1,75 @@
 ﻿@model PortalSocios.Models.Quotas
 
-@{
-    ViewBag.Title = "Create";
-}
+<!DOCTYPE html>
+<html lang="pt">
+<head>
+    <meta charset="utf-8" />
+    <title>Criar Nova Quota | Portal dos Sócios do Clube Desportivo Coxos da Bola</title>
+    <script src="~/Scripts/jquery-1.10.2.min.js"></script>
+    <script src="~/Scripts/jquery.validate.min.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+</head>
+<body>
+    <div class="titulo"><h3>CRIAR NOVA QUOTA</h3></div>
+    <div class="titulo"><h5>@Html.ActionLink("- Voltar à lista -", "Index")</h5></div>
+    <hr />
 
-<h3>Criar Nova Quota</h3>
+    @using (Html.BeginForm()) {
+        @Html.AntiForgeryToken()
 
-@using (Html.BeginForm()) {
-    @Html.AntiForgeryToken()
+        <div class="form-horizontal painel2">
+            @Html.ValidationSummary(true, "")
+            <div class="form-group">
+                @Html.LabelFor(model => model.Referencia, htmlAttributes: new { @class = "control-label col-md-4" })
+                <div class="col-md-8">
+                    @Html.EditorFor(model => model.Referencia, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.Referencia, "")
+                </div>
+            </div>
 
-    <div class="form-horizontal">
-        <hr />
-        @Html.ValidationSummary(true, "")
-        <div class="form-group">
-            @Html.LabelFor(model => model.Referencia, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Referencia, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Referencia, "")
+            <div class="form-group">
+                @Html.LabelFor(model => model.AuxMontante, htmlAttributes: new { @class = "control-label col-md-4" })
+                <div class="col-md-8">
+                    @Html.EditorFor(model => model.AuxMontante, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.AuxMontante, "")
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.Ano, htmlAttributes: new { @class = "control-label col-md-4" })
+                <div class="col-md-8">
+                    @Html.EditorFor(model => model.Ano, new { htmlAttributes = new { @class = "form-control", @min = "2017", @max = "2500" } })
+                    @Html.ValidationMessageFor(model => model.Ano, "")
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.Periodicidade, htmlAttributes: new { @class = "control-label col-md-4" })
+                <div class="col-md-8">
+                    <select id="Periodicidade" name="Periodicidade" class="form-control">
+                        <option value="Bimestral">Bimestral</option>
+                        <option value="Trimestral">Trimestral</option>
+                        <option value="Semestral">Semestral</option>
+                        <option value="Mensal">Mensal</option>
+                        <option value="Anual">Anual</option>
+                    </select>
+                    @Html.ValidationMessageFor(model => model.Periodicidade, "")
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.CategoriaFK, "Categoria", htmlAttributes: new { @class = "control-label col-md-4" })
+                <div class="col-md-8">
+                    @Html.DropDownList("CategoriaFK", null, htmlAttributes: new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.CategoriaFK, "")
+                </div>
             </div>
         </div>
-
         <div class="form-group">
-            @Html.LabelFor(model => model.AuxMontante, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.AuxMontante, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.AuxMontante, "")
+            <div class="col-md-12" style="text-align:center; margin-top:20px;">
+                <input type="submit" value="Criar" class="btn btn-primary" style="font-size: 16px;" />
             </div>
         </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Ano, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Ano, new { htmlAttributes = new { @class = "form-control", @min = "2017", @max = "2500" } })
-                @Html.ValidationMessageFor(model => model.Ano, "")
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Periodicidade, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <select id="Periodicidade" name="Periodicidade" class="form-control">
-                    <option value="Bimestral">Bimestral</option>
-                    <option value="Trimestral">Trimestral</option>
-                    <option value="Semestral">Semestral</option>
-                    <option value="Mensal">Mensal</option>
-                    <option value="Anual">Anual</option>
-                </select>
-                @Html.ValidationMessageFor(model => model.Periodicidade, "")
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.CategoriaFK, "Categoria", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("CategoriaFK", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.CategoriaFK, "")
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Criar" class="btn btn-primary" />
-            </div>
-        </div>
-    </div>
-}
-
-<div>
-    @Html.ActionLink("Voltar à lista", "Index")
-</div>
-
-<script src="~/Scripts/jquery-1.10.2.min.js"></script>
-<script src="~/Scripts/jquery.validate.min.js"></script>
-<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
+    }
+</body>
+</html>
