--- a/PortalSocios/PortalSocios/Views/Shared/_LoginPartial.cshtml
+++ b/PortalSocios/PortalSocios/Views/Shared/_LoginPartial.cshtml
@@ -7,7 +7,7 @@
 
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle ligacoes" data-toggle="dropdown">Bem-vindo @User.Identity.GetUserName()!<b class="caret"></b></a>
-                <ul class="dropdown-menu drop">
+                <ul class="dropdown-menu">
                     @if (User.IsInRole("Socio")) {
                         <li><a href="~/Socios/Index">Ver/Alterar dados pessoais</a></li>
                     }
