--- a/PortalSocios/PortalSocios/Views/Socios/Create.cshtml
+++ b/PortalSocios/PortalSocios/Views/Socios/Create.cshtml
@@ -16,96 +16,97 @@
     <link rel="stylesheet" href="~/Content/bootstrap-datepicker3.min.css" />
 </head>
 <body>
-    <div class="titulo"><h3>Criar Novo Sócio</h3></div>
+    <div class="titulo"><h3>CRIAR NOVO SÓCIO</h3></div>
+    <div class="titulo"><h5>@Html.ActionLink("- Voltar à lista -", "Index")</h5></div>
     <hr />
 
     @using (Html.BeginForm("Create", "Socios", FormMethod.Post, new { enctype = "multipart/form-data" })) {
         @Html.AntiForgeryToken()
 
         <div class="form-horizontal painel2">            
-            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            @Html.ValidationSummary(true, "")
             <div class="form-group">
-                @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
+                @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label col-md-4" })
+                <div class="col-md-8">
                     @Html.EditorFor(model => model.Nome, new { htmlAttributes = new { @class = "form-control", @maxlength = "50" } })
-                    @Html.ValidationMessageFor(model => model.Nome, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.Nome, "")
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.BI, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
+                @Html.LabelFor(model => model.BI, htmlAttributes: new { @class = "control-label col-md-4" })
+                <div class="col-md-8">
                     @Html.EditorFor(model => model.BI, new { htmlAttributes = new { @class = "form-control", @maxlength = "8" } })
-                    @Html.ValidationMessageFor(model => model.BI, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.BI, "")
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.NIF, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
+                @Html.LabelFor(model => model.NIF, htmlAttributes: new { @class = "control-label col-md-4" })
+                <div class="col-md-8">
                     @Html.EditorFor(model => model.NIF, new { htmlAttributes = new { @class = "form-control", @maxlength = "9" } })
-                    @Html.ValidationMessageFor(model => model.NIF, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.NIF, "")
                 </div>
             </div>
             
             <div class="form-group">
-                @Html.LabelFor(model => model.DataNasc, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
+                @Html.LabelFor(model => model.DataNasc, htmlAttributes: new { @class = "control-label col-md-4" })
+                <div class="col-md-8">
                     @Html.EditorFor(model => model.DataNasc, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.DataNasc, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.DataNasc, "")
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
+                @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-4" })
+                <div class="col-md-8">
                     @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control", @maxlength = "50" } })
-                    @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.Email, "")
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.Telemovel, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
+                @Html.LabelFor(model => model.Telemovel, htmlAttributes: new { @class = "control-label col-md-4" })
+                <div class="col-md-8">
                     @Html.EditorFor(model => model.Telemovel, new { htmlAttributes = new { @class = "form-control", @maxlength = "9" } })
-                    @Html.ValidationMessageFor(model => model.Telemovel, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.Telemovel, "")
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.Morada, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
+                @Html.LabelFor(model => model.Morada, htmlAttributes: new { @class = "control-label col-md-4" })
+                <div class="col-md-8">
                     @Html.EditorFor(model => model.Morada, new { htmlAttributes = new { @class = "form-control", @maxlength = "80" } })
-                    @Html.ValidationMessageFor(model => model.Morada, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.Morada, "")
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.CodPostal, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
+                @Html.LabelFor(model => model.CodPostal, htmlAttributes: new { @class = "control-label col-md-4" })
+                <div class="col-md-8">
                     @Html.EditorFor(model => model.CodPostal, new { htmlAttributes = new { @class = "form-control", @maxlength = "50" } })
-                    @Html.ValidationMessageFor(model => model.CodPostal, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.CodPostal, "")
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.CategoriaFK, "Categoria", htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
+                @Html.LabelFor(model => model.CategoriaFK, "Categoria", htmlAttributes: new { @class = "control-label col-md-4" })
+                <div class="col-md-8">
                     @Html.DropDownList("CategoriaFK", null, htmlAttributes: new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.CategoriaFK, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.CategoriaFK, "")
                 </div>
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.Fotografia, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    <input type="file" name="foto2" id="foto2" />
-                    @Html.ValidationMessageFor(model => model.Fotografia, "", new { @class = "text-danger" })
+                @Html.LabelFor(model => model.Fotografia, htmlAttributes: new { @class = "control-label col-md-4" })
+                <div class="col-md-8">
+                    <input type="file" name="foto2" id="foto2" style="margin-top: 6px;" />
+                    @Html.ValidationMessageFor(model => model.Fotografia, "")
                 </div>
             </div>
         </div>
         <div class="col-md-12" style="text-align:center; margin-top:20px;">
-            <input type="submit" value="Criar" class="btn btn-primary" />
+            <input type="submit" value="Criar" class="btn btn-primary" style="font-size: 16px;" />
         </div>
     }
     <script type="text/javascript">
